@@ -34,18 +34,4 @@
             android:textSize="14sp" />
     </LinearLayout>
     
-	<LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true">
-	    
-	    <Button
-	    android:id="@+id/msg_btn"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:text="@string/button_msg"
-	    android:focusable="false" 
-	    android:clickable="true" />
-    </LinearLayout>
-
 </RelativeLayout>
