@@ -234,7 +234,6 @@
     <string name="action_stream">Stream a media file</string>
     <string name="button_select_media_file">Browse</string>
     <string name="button_stream_media_file">Stream</string>
-    <string name="button_msg">Message</string>
     <string name="button_send">Send</string>
 
     <string name="channel_prop_title_name">Name</string>
